# gameX

./: CMakeLists.txt  main.c  sdl.c
headers/: main.h
